@@ -1717,17 +1717,6 @@
       </component>
     </version>
   </module>
-  <module name="monkey-media">
-    <version release="gnome-2.4">
-      <component name="monkey-media" dir="monkey-media" group="extras">
-        <podir dir="po"/>
-	<potname name="monkey-media.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
   <module name="mrproject">
     <version release="gnome-2.4">
       <component name="mrproject" dir="mrproject" group="office">
