@@ -1,5 +1,10 @@
 2003-07-31  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Removed monkey-media, maintainer says
+	it's moved into rhythmbox now.
+
+2003-07-31  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Fixed gnopernicus pot file name.
 
 2003-07-28  Christian Rose  <menthos@menthos.com>
